Add section and containers

--- a/assets/styles/base/_typography.sass
+++ b/assets/styles/base/_typography.sass
@@ -1,4 +1,6 @@
-html
+html, body
+  font-family: 'Oxygen', 'Source Sans Pro', -apple-system, BlinkMacSystemFont,
+  'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif
   font-size: $font-size
   -ms-text-size-adjust: 100%
   -webkit-text-size-adjust: 100%
@@ -58,9 +60,9 @@ a
   font-weight: $action-font-weight
   line-height: $action-line-height
   text-decoration: none
-  color: $bethegame-dark-blue
+  color: $text-color
   &:visited
-    color: $bethegame-dark-blue
+    color: $text-color
 
 p
   font-family: $paragraph-font
