--- a/assets/styles/config/_colors.sass
+++ b/assets/styles/config/_colors.sass
@@ -18,10 +18,10 @@ $black: #222222 !default
 $neutral: #f9fafb !default
 
 //app-theme
-$app-bg: $white !default
-$app-fg: $bethegame-blue !default
+$app-bg: $neutral !default
+$app-fg: $black !default
 $content-bg: transparent !default
-$content-fg: $neutral !default
+$content-fg: $app-fg !default
 $header-bg: $white !default
 $header-fg: $black !default
 $footer-bg: $white !default
@@ -43,12 +43,12 @@ $link-visited-fg: $neutral !default
 $link-visited-bg: none !default
 
 //actions
-$action-bg: $bethegame-dark-blue !default
+$action-bg: $text-color !default
 $action-fg: $white !default
-$action-border: $bethegame-blue !default
-$action-hover-bg: $bethegame-blue !default
+$action-border: $dash-blue !default
+$action-hover-bg: $dash-blue !default
 $action-hover-fg: $white !default
-$action-hover-border: $bethegame-blue !default
+$action-hover-border: $dash-blue !default
 
 // navigation
 $nav-fg: $app-fg !default
