--- a/assets/styles/config/_typography.sass
+++ b/assets/styles/config/_typography.sass
@@ -1,4 +1,4 @@
-$font: omnes-pro, sans-serif !default
+$font: Oxygen, sans-serif !default
 $font-size: 16px !default
 $font-weight: 400 !default
 $line-height: 1.5 !default
