--- a/assets/styles/mixins/_form-input.sass
+++ b/assets/styles/mixins/_form-input.sass
@@ -1,13 +1,13 @@
 $form-input-bg: $white
 $form-input-fg: $black
-$brand-color: $bethegame-dark-blue
+$brand-color: $text-color
 $button-border: transparent
 $button-focus-border: transparent
 $form-input-font-weight: 600 !default
 $form-input-font: $font !default
 $form-input-font-size: inherit !default
 $form-input-border: transparent transparent rgba($black, 0.25) transparent !default
-$form-input-border-focus: transparent transparent $bethegame-blue transparent !default
+$form-input-border-focus: transparent transparent $dash-blue transparent !default
 $form-input-padding: $space/2 0 !default
 
 @mixin form-input
