--- a/assets/styles/base/_base.sass
+++ b/assets/styles/base/_base.sass
@@ -12,13 +12,13 @@ ul
 
 .page
   padding-top: $header-height
-  main
+  section
     .container
       min-height: 50rem
       background: $white
       max-width: $page-width
-      padding: $space
-      box-shadow: 0 0 30px 10px rgba($bethegame-dark-blue, 0.5)
+      padding-left: $space*4
+      box-shadow: 0 0 30px 10px rgba($text-color, 0.5)
       @media (max-width: $page-width)
         max-width: 100vw
         overflow-x: hidden
@@ -35,7 +35,7 @@ img
   position: relative
   &:after
     content: " "
-    background: $bethegame-dark-blue
+    background: $text-color
     height: 5px
     width: 3rem
     @include absolute-s
