--- a/assets/styles/base/_base.sass
+++ b/assets/styles/base/_base.sass
@@ -18,7 +18,7 @@ ul
       background: $white
       max-width: $page-width
       padding-left: $space*4
-      box-shadow: 0 0 30px 10px rgba($text-color, 0.5)
+      color: #313435
       @media (max-width: $page-width)
         max-width: 100vw
         overflow-x: hidden
