Add css changes

--- a/assets/styles/base/_base.sass
+++ b/assets/styles/base/_base.sass
@@ -11,19 +11,18 @@ ul
   @include reset
 
 .page
-  padding-top: $header-height
+  // padding-top: $header-height
   section
     .container
-      min-height: 50rem
+      // min-height: 50rem
       background: $white
       max-width: $page-width
-      padding-left: $space*4
+      padding-left: $space*6
+      padding-right: $space*1.5
       color: #313435
       @media (max-width: $page-width)
         max-width: 100vw
         overflow-x: hidden
-      @media (min-width: $page-width + 20)
-        margin: 0 auto 0 20rem
 
 img
   max-width: 100%
